<resources>
    <string name="app_name">Design Assignment</string>

    <string name="welcome">Welcome</string>
    <string name="login_for">Login for enjoy find home</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="create_ac">Create new Account</string>

    <string name="search_image_icon">Search Image Icon</string>
</resources>
